# obsidian-repo-mounts

./: LICENSE  README.md  pyproject.toml
docs/: research.md  spec.md
examples/: otlichniy-ulov.json  project-docs.json
src/obsidian_repo_mounts/: cli.py
tests/: test_cli.py
